--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,8 +8,8 @@
 
     <Button
         android:id="@+id/registerButton"
-        android:layout_width="299dp"
-        android:layout_height="46dp"
+        android:layout_width="306dp"
+        android:layout_height="63dp"
         android:layout_marginTop="20dp"
         android:text="Register"
         app:layout_constraintEnd_toEndOf="parent"
@@ -20,11 +20,12 @@
     <EditText
         android:id="@+id/loginUsername"
         android:layout_width="300dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="76dp"
+        android:layout_height="52dp"
+        android:layout_marginTop="160dp"
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textPersonName"
+        android:textColorHint="#757575"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,25 +33,25 @@
 
     <EditText
         android:id="@+id/loginPassword"
-        android:layout_width="298dp"
-        android:layout_height="40dp"
+        android:layout_width="297dp"
+        android:layout_height="53dp"
         android:layout_marginTop="78dp"
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
         android:password="true"
+        android:textColorHint="#757575"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/loginUsername" />
 
     <Button
         android:id="@+id/loginButton"
-        android:layout_width="299dp"
-        android:layout_height="46dp"
-        android:layout_marginTop="80dp"
+        android:layout_width="304dp"
+        android:layout_height="63dp"
+        android:layout_marginTop="140dp"
         android:text="Login"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginPassword" />
 </androidx.constraintlayout.widget.ConstraintLayout>
